--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "ag-grid-community": "^27.2.1",
+    "ag-grid-react": "^27.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
